crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__natural_order.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> natural_order.py:1:1
   |
 1 | / import numpy1
 2 | | import numpy10
 3 | | import numpy2
 4 | | from numpy import (
 5 | |     cos,
 6 | |     int8,
 7 | |     sin,
 8 | |     int32,
 9 | |     int64,
10 | |     tan,
11 | |     uint8,
12 | |     uint16,
13 | |     int16,
14 | |     uint32,
15 | |     uint64,
16 | | )
   | |_^
help: Organize imports
   |
 1 + import numpy1
 2 + import numpy2
 3 + import numpy10
 4 + from numpy import (
 5 +     cos,
 6 +     int8,
 7 +     int16,
 8 +     int32,
 9 +     int64,
10 +     sin,
11 +     tan,
12 +     uint8,
13 +     uint16,
14 +     uint32,
15 +     uint64,
16 + )
   |
