crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__no_wrap_star.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> no_wrap_star.py:1:1
  |
1 | from .subscription import * # type: ignore  # some very long comment explaining why this needs a type ignore
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Organize imports
  |
1 | from .subscription import *  # type: ignore  # some very long comment explaining why this needs a type ignore
  |                             +
